--- a/linux-wm/waybar/style.css
+++ b/linux-wm/waybar/style.css
@@ -1,7 +1,7 @@
 * {
   border: none;
-  font-family: Overpass Nerd Font, Roboto, Arial, sans-serif;
-  font-size: 14px;
+  font-family: JetBrainsMono Nerd Font Propo;
+  font-size: 16px;
   color: #ffffff;
   border-radius: 20px;
 }
@@ -11,30 +11,34 @@ window#waybar {
 }
 
 /*-----module groups----*/
+.modules-right,
+.modules-center,
+.modules-left {
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
 .modules-right {
-  background-color: rgba(0, 0, 0, 0.5);
-  margin: 2px 10px 0 0;
+  margin: 5px 10px 0 0;
 }
 
 .modules-center {
-  background-color: rgba(0, 0, 0, 0.5);
-  margin: 2px 0 0 0;
+  margin: 5px 0 0 0;
+  padding: 0 5px;
 }
 
 .modules-left {
-  margin: 2px 0 0 5px;
-  background-color: rgba(0, 0, 0, 0.5);
+  margin: 5px 0 0 10px;
 }
 
 /*-----modules indv----*/
 #workspaces button {
-  padding: 1px 5px;
+  padding: 2px 14px;
   background-color: transparent;
 }
 
 #workspaces button:hover {
   box-shadow: inherit;
-  background-color: rgba(0, 153, 153, 1);
+  background-color: rgba(200, 200, 200, 0.9);
 }
 
 #workspaces button.active {
@@ -79,11 +83,3 @@ window#waybar {
 #temperature.critical {
   color: #cc3436;
 }
-
-/*-----Colors----*/
-/*
-*rgba(0,85,102,1),#005566 --> Indigo(dye)
-*rgba(0,43,51,1),#002B33 --> Dark Green 
-*rgba(0,153,153,1),#009999 --> Persian Green 
-*
-*/
